--- a/PointOfSalesSystem/Views/Branches/Create.cshtml
+++ b/PointOfSalesSystem/Views/Branches/Create.cshtml
@@ -17,9 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OrganizationsId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("OrganizationsId", new SelectList(
-                                                                    
-                                                                  Model.Organizationses  ,"Id", "Name"), "Select . . .",new { @class = "form-control" })
+                @Html.DropDownList("OrganizationsId", new SelectList(Model.Organizationses  ,"Id", "Name"), "Select . . .",new { @class = "form-control" })
 
                 
 
