PurchaseReceiving class changes

--- a/PointOfSalesSystem/Views/ExpenseItem/Create.cshtml
+++ b/PointOfSalesSystem/Views/ExpenseItem/Create.cshtml
@@ -65,6 +65,24 @@
             </div>
         </div>
     </div>
+
+    <table class="table table-hover table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Sl</th>
+                <th>Category</th>
+                <th>Name</th>
+                <th>Code</th>
+                <th>Description</th>
+                <th>Action</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table>
+
 }
 
 <div>
