--- a/PointOfSalesSystem/Views/ItemCategory/Create.cshtml
+++ b/PointOfSalesSystem/Views/ItemCategory/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@model PointOfSalesSystem.Models.ViewModels.ItemCategoryCreateVM
-
+@using PointOfSalesSystem.Models.ViewModels;
 @using POS.Models.EntityModel;
 
 @{
@@ -25,8 +25,8 @@
             @Html.LabelFor(model => model.ParentId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ParentId", new SelectList(from p in Model.Child
-                                                                    where p.ParentId == null
-                                                                    select new { p.Id, p.Name, },"Id", "Name"), "Select . . .",new { @class = "form-control" })
+                                                              where p.ParentId == null
+                                                              select new { p.Id, p.Name, }, "Id", "Name"), "Select . . .", new { @class = "form-control" })
 
                 @*@Html.DropDownList("ParentCategory", new SelectList(Model.Parent,"Id", "Name"), "Select . . .",new { @class = "form-control" })*@
 
@@ -75,38 +75,80 @@
     </div>
 }
 
-<table>
+<table class="table table-bordered table-condensed table-hover table-responsive table-striped">
     <thead>
         <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                Category Type
+            </th>
+            <th>
+                Category
+            </th>
             <th>
                 Name
             </th>
             <th>
-                Item Category Code
+                Code
             </th>
             <th>
-                Description
+                Desciption
             </th>
             <th>
                 Image
             </th>
             <th>
-                Parent Id
+                Action
             </th>
         </tr>
     <thead>
     <tbody>
-        <tr>
+        @{
+            int sl = 0;
+        }
+        
             @foreach (ItemCategory itemCategory in Model.Child)
             {
         <tr>
+            <td>@(++sl)</td>
 
-            <td>@itemCategory.Name</td>
-            <td>@itemCategory.ItemCategoryCode</td>
-        </tr>
-
+            @if (itemCategory.ParentId == null)
+            {
+                <td>
+                    Parent
+                </td>
+                <td>
+                    @(itemCategory.Name)
+                </td>
             }
-            </tr>
+            else
+            {
+                <td>
+                    Child
+                </td>
+                <td>
+                    @((from p in Model.Child
+                       where p.Id == itemCategory.ParentId
+                       select new { p.Name }).First())
+                </td>
+            }
+
+            <td>@(itemCategory.Name )</td>
+
+            <td>@(itemCategory.ItemCategoryCode )</td>
+
+            <td>@(itemCategory.Description )</td>
+
+            <td>@(itemCategory.Image )</td>
+
+            <td>Action</td>
+
+        </tr>
+        }
+        
+         
         </tbody>
 
 </table>
