purchaseReceiving Design Corrected

--- a/PointOfSalesSystem/Views/PurchaseReceiving/Create.cshtml
+++ b/PointOfSalesSystem/Views/PurchaseReceiving/Create.cshtml
@@ -16,61 +16,69 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-horizontal">
         <div class="form-group ">
-            <div class="row ">
+            <div class="row panel panel-heading">
                 @*...............OUTLET & Form Date,,,,,,,,,,,,,,,,,,,,*@
 
 
 
-                <div class="col-md-2">
+                <div class="col-md-2 col-md-offset-1 ">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ItemId, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.ItemId, new SelectList(Model.Items, "Id", "Name"), "Select . . .", new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+                        @Html.LabelFor(model => model.ItemId, htmlAttributes: new { @class = "control-label" })
 
+                        @Html.DropDownListFor(model => model.ItemId, new SelectList(Model.Items, "Id", "Name"), "Select . . .", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
 
-                <div class="col-md-2 ">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                </div>
-
-
-                <div class="col-md-2 ">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.PurchasePrice, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.PurchasePrice, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.PurchasePrice, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-
-                </div>
 
 
                 <div class="col-md-2 col-md-offset-1">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label" })
+
+                        @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+
+
+                <div class="col-md-2 col-md-offset-1">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.PurchasePrice, htmlAttributes: new { @class = "control-label col-md-1" })
+                        <
+                        @Html.EditorFor(model => model.PurchasePrice, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PurchasePrice, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div>
+                    <div class="col-md-1 col-md-offset-1">
                     <br>
                     <input type="submit" value="Add" class="btn btn-info">
                 </div>
 
-                <div class="col-md-2 ">
+                <div class="col-md-1 ">
                     <br>
                     <input type="submit" value="Delete" class="btn btn-danger">
                 </div>
+                </div>
+                
+
+            </div>
+
+        </div>
+
+
+                </div>
+
+
+                
 
                 <br>
 
             </div>
-        </div>
+        
 
 
 
@@ -78,14 +86,14 @@
 
 
 
-    </div>
+    
     
 
     @*..............Table................*@
 
     <br>
-    <div class="form-group-row">
-        <div class="col-md-6">
+    <div class="form-group-row panel panel-body">
+        <div class="col-md-7 col-md-offset-1">
             <table class="table table-hover table-striped table-bordered table-responsive">
                 <thead>
                     <tr>
@@ -108,10 +116,10 @@
             </table>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-3 col-md-offset-0 panel panel-default">
             <div class="form-group row">
-                <div class="col-md-6">
-                    @Html.LabelFor(model => model.BranchId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-12">
+                    @Html.LabelFor(model => model.BranchId, htmlAttributes: new { @class = "control-label" })
 
                     @Html.DropDownListFor(model => model.BranchId, new SelectList(Model.Branches, "Id", "Name"), "Select . . .", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
@@ -120,8 +128,8 @@
             </div>
 
             <div class="form-group row">
-                <div class="col-md-6">
-                    @Html.LabelFor(model => model.EmployeeInfoId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-12">
+                    @Html.LabelFor(model => model.EmployeeInfoId, htmlAttributes: new { @class = "control-label" })
 
                     @Html.DropDownListFor(model => model.EmployeeInfoId, new SelectList(Model.EmployeeInfoes, "Id", "Name"), "Select . . .", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.EmployeeInfoId, "", new { @class = "text-danger" })
@@ -130,33 +138,30 @@
             </div>
 
             <div class="form-group row">
-                <div class="col-md-3">
-                    @Html.LabelFor(model => model.PurchaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-12">
+                    @Html.LabelFor(model => model.PurchaseDate, htmlAttributes: new { @class = "control-label" })
                     @Html.EditorFor(model => model.PurchaseDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PurchaseDate, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-md-3">
-                    @Html.LabelFor(model => model.PartyId, htmlAttributes: new { @class = "control-label col-md-2" })
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-12">
+                    @Html.LabelFor(model => model.PartyId, htmlAttributes: new { @class = "control-label" })
                     @Html.EditorFor(model => model.PartyId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PartyId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-md-3">
-                    @Html.LabelFor(model => model.Remarks, htmlAttributes: new { @class = "control-label col-md-2" })
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-12">
+                    @Html.LabelFor(model => model.Remarks, htmlAttributes: new { @class = "control-label" })
                     @Html.EditorFor(model => model.Remarks, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Remarks, "", new { @class = "text-danger" })
                 </div>
+            </div>
+            <div class="panel-footer">
+                Purchase Summary
             </div>
 
 
@@ -164,7 +169,7 @@
 
         <div class="form-group-row">
 
-            <div class="col-md-6 col-md-offset-6">
+            <div class="col-md-3 col-md-offset-8">
                 @*<h6 align="center"><b>Purchase Summary</b><br></h6>*@
                 <table class="table table-hover table-striped table-bordered table-responsive">
                     <thead>
@@ -184,24 +189,22 @@
 
     </div>
 
-    <div class="form-group-row">
+    <div class="form-group-row panel panel-footer">
 
-        <div class="col-md-2 col-md-offset-6">
+        <div class="col-md-1 col-md-offset-8">
             <br>
             <input type="submit" value="Save" class="btn btn-default">
         </div>
 
-        <div class="col-md-2 ">
+        <div class="col-md-1 ">
             <br>
             <input type="submit" value="Cancel" class="btn btn-default">
         </div>
 
     </div>
 
-    </div>
+   
 
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+   
